# address_search

./: .gitignore  Cargo.toml
as-parquet/: Cargo.toml  data
as-parquet/etc/: get-parquet-schema.rs
as-parquet/src/: main.bak  main.rs  release.sh
hadoop-java/: pom.xml
hadoop-java/src/main/java/net/hoodedice/: AddressJsonOutputFormat.java  AddressRecord.java  JsonOutputFormat.java  Main.java  ParquetMain.bak
hdfs/: Cargo.toml  Readme.md  docker-compose.yaml  mapred-site.xml  part.csv  setup-docker.sh
hdfs/src/: mapper.rs
hdfs/test.parquet/: part-m-00003.parquet
polars/: Cargo.toml
polars/src/: main.bak  main.rs
sql/src/: create.sql
src/: f  main.rs  server.rs
src/routes/: RouteTrait.rs  api.rs  mod.rs  test.http
src/server/: errors.rs
