[package]
name = "as-parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = { version = "49.0.0", features = ["async"] }
futures = { version = "0.3.29" }
arrow-schema = "49.0.0"
arrow = { version = "49.0.0", features = ["prettyprint"] }
