[package]
name = "polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[dependencies.polars]
version = "0.35"
features = ["lazy", "parquet", "serde", "json", "polars-io", "streaming", "strings", "concat_str", "lazy_regex"]
